# oresat-solar-simulator-hardware

./: .gitignore  413 Proposal.gan  README.md  dockerfile
.github/workflows/: pcb_image.yaml
413 Gantt Chart/: 413 Gantt Chart.gan
Documentation/: SoftwareDesignDoc.md
boards/connector-breakout/: connector-breakout.kicad_pcb  connector-breakout.kicad_pro  fp-lib-table  sym-lib-table
boards/controller-board/: #auto_saved_files#  controller-board-pico.kicad_sch  controller-board-sch-leds.kicad_sch  controller-board-sch-pico.kicad_sch  controller-board.kicad_pcb  controller-board.kicad_pro  controller-board.kicad_sch  controller-brd.kicad_sym  fp-lib-table  led-drivers.kicad_sch  solarsim bom  sym-lib-table  untitled.kicad_sch  ~controller-board.kicad_sch.lck
boards/pico-pb-adapter/: fp-lib-table  pico-pb-adapter.kicad_pcb  (+3 more)
capstone-relics/: README.md  pyproject.toml
capstone-relics/prototyping/prototype-1/: main.py  mysocket.py
capstone-relics/prototyping/prototype-2/: cubesat.py  p2-validation.py  pocketBeagle.py
connector-breakout/: connector-breakout.kicad_sch
controller-board/: controller-board-bom.xlsx  controller-board.kicad_pcb  controller-board.kicad_prl  controller-board.kicad_pro  controller-board.kicad_sch
modeling/: 1uBasePlate.step  1uBasePlate.step:Zone.Identifier  1uBasePlate.stl  CaseSides.step  CaseSides.step:Zone.Identifier  CaseSides.stl  Lid.step  Lid.step:Zone.Identifier  Lid.stl  top-model-v0.2.stl
sensor-board/: sensor-board.kicad_pcb  sensor-board.kicad_prl  sensor-board.kicad_pro  sensor-board.kicad_sch  sym-lib-table
(+33 files in other folders)
